fix: country card text overflow

--- a/src/components/Desktop/Countries/Country/Country.module.css
+++ b/src/components/Desktop/Countries/Country/Country.module.css
@@ -7,12 +7,11 @@
   color: var(--veryDarkBlue);
 }
 .Country {
-  width: 280px;
   box-shadow: #64646f33 0px 7px 29px 0px;
   border-radius: 8px;
   margin-bottom: 25px;
   width: 300px;
-  height: 400px;
+  height:400px;
 }
 .Country a {
   text-decoration: none;
@@ -36,6 +35,6 @@
 @media screen and (max-width: 1330px) {
   .Country {
     width: 250px;
-    height: 320px;
+    height: 360px;
   }
 }
