--- a/src/components/Mobile/Countries/Country/Country.module.css
+++ b/src/components/Mobile/Countries/Country/Country.module.css
@@ -8,6 +8,7 @@
 }
 .Country {
   width: 280px;
+  height: 360px;
   box-shadow: #64646f33 0px 7px 29px 0px;
   border-radius: 8px;
   margin-bottom: 25px;
